--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "zip:firefox": "wxt zip -b firefox",
     "compile": "tsc --noEmit",
     "postinstall": "wxt prepare",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@huggingface/transformers": "^3.0.1",
@@ -36,15 +37,15 @@
     "@babel/preset-env": "^7.23.0",
     "@babel/preset-typescript": "^7.23.0",
     "@types/chrome": "^0.0.269",
-    "@types/jest": "^29.0.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@wxt-dev/module-react": "^1.1.1",
     "autoprefixer": "^10.4.20",
-    "jest": "^29.0.0",
+    "jest": "^29.7.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.6.2",
     "wxt": "^0.19.11"
